update : devlog week #2 struture

--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
         <div class="top-buffer-1"></div>
         <!-- blank box for page layout -->
 
-        <div class="wrapper-content d-flex justify-content-center">
+        <div class="wrapper-content d-flex justify-content-center align-items-center flex-column">
+
+            <!-- devlog week #1 -->
             <div class="card col-11">
                 <div class="card-header">Devlog week#1 &nbsp;&nbsp; ( 16-22 Oct )</div>
                 <div class="card-body">
@@ -167,6 +169,18 @@
                     <div class="top-buffer-1"></div>
                     <p class="topic">SKETCH</p>
                     <p>[circuit sketch image]</p>
+                </div>
+            </div>
+            <!-- blank box for page layout -->
+            <div class="top-buffer-1"></div>
+            <!-- blank box for page layout -->
+
+            <!-- devlog week #2 -->
+            <div class="card col-11">
+                <div class="card-header">Devlog week#2 &nbsp;&nbsp; ( 23-29 Oct )</div>
+                <div class="card-body">
+                    <label>Currently in progress.</label>
+
                 </div>
             </div>
         </div>
