--- a/index.html
+++ b/index.html
@@ -166,7 +166,34 @@
                         <hr class="col-11 custom-hr">
                     </div>
 
-                    <div class="top-buffer-1"></div>
+                    <!-- <div class="top-buffer-2"></div> -->
+                    <div class="column d-flex justify-content-center">
+                        <div
+                            class="container col-6 d-flex flex-column align-items-center justify-content-start border-end">
+                            <p class="topic">List of Hardware</p>
+                            <ul>
+                                <li>Aruduino UNO</li>
+                                <li>Capacitive soil moisture sensor v1.2</li>
+                                <li>Breadboard</li>
+                                <li>Wires</li>
+                                <li>DHT22 air temperature-humidity sensor</li>
+                                <li>Mini water pump</li>
+                                <li>Rubber tube for mini water pump</li>
+                                <li>LED lights</li>
+                                <li>Water level sensor</li>
+                                <li>Monstera plant</li>
+                                <li>Switch</li>
+                            </ul>
+                        </div>
+                        <div class="container col-6 d-flex flex-column align-items-center justify-content-start">
+                            <p class="topic">List of Software</p>
+                            <ul>
+                                <li>MATLAB</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <!-- <div class="top-buffer-1"></div> -->
                     <p class="topic">SKETCH</p>
                     <p>[circuit sketch image]</p>
                 </div>
