update : new phase structure and add icons

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
     <div class="wrapper">
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container-fluid">
                 <label class="navbar-brand text-light">Garden Worker</label>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -84,93 +84,104 @@
             <div class="card col-11">
                 <div class="card-header">Devlog week#1 &nbsp;&nbsp; ( 16-22 Oct )</div>
                 <div class="card-body">
-                    <label>We spend time doing some research about the component that we'll use.</label>
-                    <a
-                        href="https://docs.google.com/document/d/1BV4Dnmudf09sUMc-OvnvH7sMoWsXefhxKTYgl2rL3wo/edit">HERE</a>
+
                     <div class="top-buffer-1"></div>
-                    <p class="topic">TASK LIST <i class="fa-solid fa-network-wired"></i></p>
-                    <p>PHASE 1&nbsp;&nbsp;&nbsp;&nbsp;[ RESEARCH ]</p>
-                    <div class="row d-flex justify-content-center">
-                        <div class="col-3 d-flex  flex-column align-items-center">
-                            <p>About plants</p>
-                            <span class="dot"></span>
+                    <p class="topic">TASK LIST <i class="fa fa-network-wired"></i></p>
+
+                    <div class="container">
+                        <p>PHASE 1&nbsp;&nbsp;&nbsp;&nbsp;[ RESEARCH ]</p>
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-3 d-flex  flex-column align-items-center">
+                                <p>About plants</p>
+                                <span class="dot"></span>
+                            </div>
+                            <div class="col-3 d-flex flex-column align-items-center">
+                                <p>About hardware for plant</p>
+                                <span class="dot "></span>
+                            </div>
+                            <div class="col-3  d-flex flex-column align-items-center">
+                                <p>About MATLAB</p>
+                                <span class="dot "></span>
+                            </div>
+                            <div class="col-3  d-flex flex-column align-items-center">
+                                <p>About GUI in MATLAB</p>
+                                <span class="dot "></span>
+                            </div>
                         </div>
-                        <div class="col-3 d-flex flex-column align-items-center">
-                            <p>About hardware for plant</p>
-                            <span class="dot "></span>
+                        <div>
+                            <hr class="col-11 ">
                         </div>
-                        <div class="col-3  d-flex flex-column align-items-center">
-                            <p>About MATLAB</p>
-                            <span class="dot "></span>
-                        </div>
-                        <div class="col-3  d-flex flex-column align-items-center">
-                            <p>About GUI in MATLAB</p>
-                            <span class="dot "></span>
+                    </div>
+
+                    <!-- blank box for page layout -->
+                    <div class="top-buffer-1"></div>
+                    <!-- blank box for page layout -->
+
+
+                    <div class="container">
+                        <p>PHASE 2&nbsp;&nbsp;&nbsp;&nbsp;[ ARDUINO #1 ]</p>
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-2 d-flex  flex-column align-items-center">
+                                <p>Arduino UNO</p>
+                                <span class="dot"></span>
+                            </div>
+                            <div class="col-3 d-flex flex-column align-items-center">
+                                <p>Capacitive soil moisture sensor v1.2</p>
+                                <span class="dot "></span>
+                            </div>
+                            <div class="col-2  d-flex flex-column align-items-center">
+                                <p>Mini water pump</p>
+                                <span class="dot "></span>
+                            </div>
+                            <div class="col-2  d-flex flex-column align-items-center">
+                                <p>DHT22</p>
+                                <span class="dot "></span>
+                            </div>
+                            <div class="col-1  d-flex flex-column align-items-center">
+                                <p>LED</p>
+                                <span class="dot "></span>
+                            </div>
+
                         </div>
                         <hr class="col-11 ">
                     </div>
 
                     <!-- blank box for page layout -->
-                    <div class="top-buffer-2"></div>
+                    <div class="top-buffer-1"></div>
                     <!-- blank box for page layout -->
 
-                    <p>PHASE 2&nbsp;&nbsp;&nbsp;&nbsp;[ ARDUINO #1 ]</p>
-                    <div class="row d-flex justify-content-center">
-                        <div class="col-2 d-flex  flex-column align-items-center">
-                            <p>Arduino UNO</p>
-                            <span class="dot"></span>
-                        </div>
-                        <div class="col-3 d-flex flex-column align-items-center">
-                            <p>Capacitive soil moisture sensor v1.2</p>
-                            <span class="dot "></span>
-                        </div>
-                        <div class="col-2  d-flex flex-column align-items-center">
-                            <p>Mini water pump</p>
-                            <span class="dot "></span>
-                        </div>
-                        <div class="col-2  d-flex flex-column align-items-center">
-                            <p>DHT22</p>
-                            <span class="dot "></span>
-                        </div>
-                        <div class="col-1  d-flex flex-column align-items-center">
-                            <p>LED</p>
-                            <span class="dot "></span>
-                        </div>
-                        <hr class="col-11 ">
-                    </div>
-                    <div class="top-buffer-2"></div>
 
-                    <p>PHASE 3&nbsp;&nbsp;&nbsp;&nbsp;[ ARDUINO #2 ]</p>
-                    <div class="top-buffer-1"></div>
-                    <div class="row d-flex justify-content-center">
-                        <div class="col-2 d-flex  flex-column align-items-center ">
-                            <p class="text-center"><br>Arduino UNO + DHT22</p>
-                            <span class="dot"></span>
-                        </div>
-                        <div class="col-3 d-flex flex-column align-items-center">
-                            <p class="text-center">Arduino UNO + Capacitive soil moisture sensor v1.2</p>
-                            <span class="dot "></span>
-                        </div>
-                        <div class="col-2  d-flex flex-column align-items-center">
-                            <p class="text-center">Arduino UNO + Mini water pump</p>
-                            <span class="dot "></span>
-                        </div>
-                        <div class="col-2  d-flex flex-column align-items-center">
-                            <p class="text-center">Arduino UNO + DHT22 + LED</p>
-                            <span class="dot "></span>
-                        </div>
-                        <div class="col-2  d-flex flex-column align-items-center">
-                            <p class="text-center"><br>MATLAB GUI</p>
-                            <span class="dot "></span>
+                    <div class="container">
+                        <p>PHASE 3&nbsp;&nbsp;&nbsp;&nbsp;[ ARDUINO #2 ]</p>
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-2 d-flex  flex-column align-items-center ">
+                                <p class="text-center"><br>Arduino UNO + DHT22</p>
+                                <span class="dot"></span>
+                            </div>
+                            <div class="col-3 d-flex flex-column align-items-center">
+                                <p class="text-center">Arduino UNO + Capacitive soil moisture sensor v1.2</p>
+                                <span class="dot "></span>
+                            </div>
+                            <div class="col-2  d-flex flex-column align-items-center">
+                                <p class="text-center">Arduino UNO + Mini water pump</p>
+                                <span class="dot "></span>
+                            </div>
+                            <div class="col-2  d-flex flex-column align-items-center">
+                                <p class="text-center">Arduino UNO + DHT22 + LED</p>
+                                <span class="dot "></span>
+                            </div>
+                            <div class="col-2  d-flex flex-column align-items-center">
+                                <p class="text-center"><br>MATLAB GUI</p>
+                                <span class="dot "></span>
+                            </div>
                         </div>
                         <hr class="col-11 custom-hr">
                     </div>
 
-                    <!-- <div class="top-buffer-2"></div> -->
                     <div class="column d-flex justify-content-center">
                         <div
-                            class="container col-6 d-flex flex-column align-items-center justify-content-start border-end">
-                            <p class="topic">List of Hardware</p>
+                            class="container col-6 d-flex flex-column align-items-center justify-content-start border-end border-2">
+                            <p class="topic">List of Hardware <i class="fa fa-microchip"></i></p>
                             <ul>
                                 <li>Aruduino UNO</li>
                                 <li>Capacitive soil moisture sensor v1.2</li>
@@ -186,21 +197,29 @@
                             </ul>
                         </div>
                         <div class="container col-6 d-flex flex-column align-items-center justify-content-start">
-                            <p class="topic">List of Software</p>
+                            <p class="topic">List of Software <i class="fab fa-uncharted"></i></p>
                             <ul>
                                 <li>MATLAB</li>
                             </ul>
                         </div>
                     </div>
 
-                    <!-- <div class="top-buffer-1"></div> -->
-                    <p class="topic">SKETCH</p>
+                    <p class="topic">SKETCH <i class="fa fa-pencil"></i></p>
                     <p>[circuit sketch image]</p>
+                    <div class="row ">
+                        <label>The full document. &nbsp;&nbsp;<a class=" doc_link"
+                                href="https://docs.google.com/document/d/1BV4Dnmudf09sUMc-OvnvH7sMoWsXefhxKTYgl2rL3wo/edit">HERE</a></label>
+
+                    </div>
                 </div>
+
+
             </div>
             <!-- blank box for page layout -->
             <div class="top-buffer-1"></div>
             <!-- blank box for page layout -->
+
+
 
             <!-- devlog week #2 -->
             <div class="card col-11">
