--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <span class="dot "></span>
                             </div>
                         </div>
-                        <div>
+                        <div class="d-flex justify-content-center">
                             <hr class="col-11 ">
                         </div>
                     </div>
@@ -143,7 +143,9 @@
                             </div>
 
                         </div>
-                        <hr class="col-11 ">
+                        <div class="d-flex justify-content-center">
+                            <hr class="col-11 ">
+                        </div>
                     </div>
 
                     <!-- blank box for page layout -->
@@ -175,7 +177,9 @@
                                 <span class="dot "></span>
                             </div>
                         </div>
-                        <hr class="col-11 custom-hr">
+                        <div class="d-flex justify-content-center">
+                            <hr class="col-11 custom-hr">
+                        </div>
                     </div>
 
                     <div class="column d-flex justify-content-center">
