update : member profile

--- a/index.html
+++ b/index.html
@@ -80,6 +80,34 @@
 
         <div class="wrapper-content d-flex justify-content-center align-items-center flex-column">
 
+            <!-- member -->
+            <div class="d-flex justify-content-center align-items-center">
+                <div class="card">
+                    <div class="card-body d-flex justify-content-center align-items-center">
+                        [image here]<br>
+                        SIRAPA SANGNA<br>
+                        64010102620218<br>
+                        PROJECT MANAGER
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body d-flex justify-content-center align-items-center">
+                        [image here]<br>
+                        SIRAPA SANGNA<br>
+                        64010102620218<br>
+                        PROJECT MANAGER
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-body d-flex justify-content-center align-items-center">
+                        [image here]<br>
+                        SIRAPA SANGNA<br>
+                        64010102620218<br>
+                        PROJECT MANAGER
+                    </div>
+                </div>
+            </div>
+
             <!-- devlog week #1 -->
             <div class="card col-11">
                 <div class="card-header">Devlog week#1 &nbsp;&nbsp; ( 16-22 Oct )</div>
